# BLE_Sense_IDS

./: .gitignore  .nvim.lua  LICENSE  README.md  requirements.txt
Documentation/: Env_Setup.md  PI_Setup.md  Sensor_Breakdown.md
Documentation/Backend/: setup.md
Documentation/Sensor/: Dev_Env_Setup.md  Env_Setup.md  PI_Setup.md  Sensor_Breakdown.md  Zima_Setup.md
ble_captures/: db.sqlite3  manage.py
ble_captures/ble_captures/: asgi.py  settings.py  urls.py  wsgi.py
ble_captures/client/: admin.py  company_identifiers.yaml  models.py  views.py
ble_captures/client/migrations/: 0001_initial.py  0002_alter_registy_user_delete_user.py  0002_device_rename_username_user_user_name_and_more.py  0002_packet_short_name_alter_packet_device.py  0002_packet_short_name_packet_uuids_alter_packet_device_and_more.py  0002_rename_registy_registry_packet_device.py  (+8 more)
ble_captures/collection/: consumers.py  models.py  packet_schema.avsc  routing.py  test.sql
ble_captures/management/: commands.py  loadpackets.py
ble_captures/templates/: base.html  base2.html  noNavBase.html  packets.html
sensor_sniffer/: Cargo.toml  out.txt
sensor_sniffer/FIFO_Pipe_Example/: Packet_Reader.py  Pipe_Writer.py
sensor_sniffer/FIFO_Pipe_Example/Client_Server_Example/: test_client.py  test_server.py
sensor_sniffer/Sniffed_Data/: placeholder.txt
sensor_sniffer/avro/: schema.avsc
sensor_sniffer/config/: config.ini  hb_schema.avsc  info.txt  packet_schema.avsc  schema.avsc
sensor_sniffer/src/: api.rs  config.rs  heartbeat.rs  main.rs  packet_parser.rs  socket.rs  test_decode.py  tester.rs
(+23 files in other folders)
