[package]
name = "sensor_sniffer"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrlc = "3.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
ini = "1.3.0"
regex = "1.11.0"
apache-avro = "0.17.0"  # Update to the latest version if needed
serde = { version = "1.0", features = ["derive"] }
# target needs NRFutil