[package]
name = "sensor_sniffer"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrlc = "3.2"
tokio = { version = "1", features = ["full"] }
ini = "1.3.0"
regex = "1.11.0"
apache-avro = "0.17.0"  # Update to the latest version if needed
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
hex = "0.4.3"
sysinfo = "0.32.0"
tungstenite = "0.24.0"
url = "2.4"
rand = "0.8.5"
log = "0.4"
env_logger = "0.10"
# target needs NRFutil